[tool.poetry]
name = "aula17-sql-alchemy"
version = "0.1.0"
description = ""
authors = ["danilovieira37 <danilovieira37@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
sqlalchemy = ">=2.0.41,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


